--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "fablab77.ru",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "gulpfile.js",
   "scripts": {},
   "author": "suenot",
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-load-plugins": "^0.8.1",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-watch": "^4.1.1",
+    "node-sass": "^2.0.1"
+  },
   "dependencies": {
-    "chalk": "^0.5.1",
-    "dateformat": "^1.0.11",
-    "fobject": "0.0.3",
-    "gulp": "^3.8.7",
-    "gulp-clean": "^0.3.1",
-    "gulp-coffee": "^2.2.0",
-    "gulp-connect": "^2.0.6",
-    "gulp-jade": "^0.11.0",
-    "gulp-stylus": "^1.3.0",
-    "gulp-uglify": "^1.1.0",
-    "nib": "^1.0.3"
   }
 }
