--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "suenot",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.2.3",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-load-plugins": "^0.8.1",
@@ -15,6 +16,5 @@
     "gulp-watch": "^4.1.1",
     "node-sass": "^2.0.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
