--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-load-plugins": "^0.8.1",
-    "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.0",
-    "gulp-watch": "^4.1.1",
-    "node-sass": "^2.0.1"
+    "gulp-watch": "^4.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-sass": "^2.2.0"
+  }
 }
